# var-simulation

./: .gitignore  DEPLOYMENT_CHECKLIST.md  LICENSE  README.md  TESTING.md  TESTING_QUICK_REF.md  TEST_PLAN.md  TEST_SUITE_SUMMARY.md  TEST_VISUAL_GUIDE.md  TUI_COMPARISON.md  TUI_SCREENSHOT.py  TUI_SUMMARY.md  __init__.py  app.py  demo_tui.py  main.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  streamlit_app.py  tui_app.py
.github/workflows/: test.yml
data/: sp500_caps.csv  sp500_companies.csv
docs/: analyst_forecast_comparison.md
examples/: README.md  analyst_forecast_example.py
frontend/: app.py
notebooks/: analyst_forecast_examples.ipynb  data_extraction.ipynb  stock_analysis.ipynb  tui_documentation.ipynb
src/: data.py  database.py  datamodels.py  metrics.py  params.py  tui.py  visualization.py
templates/: index.html  stock_analysis.html  var_analysis copy.html  var_analysis.html
tests/: README.md  conftest.py  test_api.py  test_data.py  test_database.py  test_datamodels.py  test_expected_outputs_example.py  test_metrics.py  test_streamlit_app.py  test_tui.py
tests/data/: README.md  aapl_sample.json  portfolio_sample.json
tests/data/outputs/: README.md  metrics_expected.json
