[project]
name = "var-simulation"
version = "0.1.0"
description = "Aplicación para estimación del Value At Risk e KPIs financieros."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.118.0",
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.6",
    "pandas>=2.3.3",
    "plotly>=6.3.0",
    "scipy>=1.16.2",
    "streamlit>=1.50.0",
    "uvicorn>=0.37.0",
    "yfinance>=0.2.66",
]

[tool.uv.workspace]
members = [
    ".",
]

[tool.uv.sources]
var-simulation = { workspace = true }

[dependency-groups]
dev = [
    "var-simulation",
]
