[project]
name = "var-simulation"
version = "0.1.0"
description = "Aplicación para estimación del Value At Risk e KPIs financieros."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "python-dotenv>=1.0.0",
    "fastapi>=0.118.0",
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.6",
    "pandas>=2.3.3",
    "plotly>=6.3.0",
    "scipy>=1.16.2",
    "sqlalchemy>=2.0.43",
    "streamlit>=1.50.0",
    "uvicorn>=0.37.0",
    "yfinance>=0.2.66",
    "numpy>=1.26.0",
    "requests>=2.31.0",
    "textual>=0.90.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.26.0",
    "responses>=0.24.0",
    "faker>=22.0.0",
    "flake8>=7.0.0",
    "black>=23.12.0",
    "isort>=5.13.0",
    "mypy>=1.8.0",
    "bandit>=1.7.0",
    "safety>=3.0.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.26.0",
    "responses>=0.24.0",
    "faker>=22.0.0",
    "flake8>=7.0.0",
    "black>=23.12.0",
    "isort>=5.13.0",
    "mypy>=1.8.0",
    "bandit>=1.7.0",
    "safety>=3.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
